--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/react-scroll": "^1.8.7",
+    "antd": "^5.9.0",
     "axios": "^1.4.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -16,6 +18,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "sort-by": "^1.2.0",
     "typescript": "^5.1.6",
     "web-vitals": "^2.1.0"
